# _demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
demo/layers/: attention.py  layernorm.py
demo/models/: config.py  qwen3.py
models/: qwen3.py
