[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "demo"
version = "1.0.0"
authors = [{ name = "nitu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
]

[project.urls]
Homepage="https://github.com/AppleEgg-169/_demo"

[tool.setuptools.packages.find]
where = ["."]
include = ["demo*"]
